feat: tmux vim navigation

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,12 @@ set -s escape-time 0
 # Use vi key bindings in copy mode
 setw -g mode-keys vi
 
+# Enter selection mode with 'v'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Copy text with 'y'
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 # Status bar customization
 set -g status-style "fg=#665c54"
 set -g status-left-style "fg=#928374"
