fix: tmux links clickable

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,14 @@ bind C-n next-window
 bind & kill-window
 bind x kill-pane
 
+# set default terminal and options
+set -g default-terminal "tmux-256color"
+set -as terminal-features ",xterm-256color:RGB"
+# note xterm-255color is used since it matches alacritty
+set -as terminal-features ",xterm-256color:hyperlinks"
+# set default shell to be zsh
+set-option -g default-shell /bin/zsh
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -73,8 +81,3 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-#set -g default-terminal "tmux-256color"
-set -ag terminal-overrides "xterm-256color:RGB"
-# set default shell to be zsh
-set-option -g default-shell /bin/zsh
